# semgrep-policies-gitops

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: apply.yml  drift.yml  plan.yml  test.yml  validate.yml
policies/: detection-code.yaml  remediation.yaml
reconciler/: __init__.py  bundles.py  cli.py  client.py
tests/: test_reconciler.py
