[project]
name = "semgrep-policies-gitops"
version = "0.1.0"
description = "Reference GitOps reconciler for the Semgrep Policies V2 API"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "responses>=0.25.0",
]

[tool.uv]
# Supply-chain cooldown: ignore packages published in the last week so a
# freshly-published malicious version cannot be pulled into a build.
exclude-newer = "1 week"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reconciler"]
